@@ -1,3 +1,7 @@
+2009-08-18  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* acconfig.h: Add templates for _HAVE_LONG_DOUBLE and _LDBL_EQ_DBL.
+
 2009-08-18  Eric Blake  <ebb9@byu.net>
 
 	* libc/posix/popen.c (popen): Fix documented prototype.
